# markovin-ketju-saveltaja

./: .coveragerc  .gitignore  .pylintrc  pyproject.toml  readme.md  tasks.py
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: main.py  markov_savelma.py  testisavelma.py  ui.py
src/markovin_ketjut/: korkeusarpoja.py  markov_savelma.py  pituusarpoja.py
src/midiluokat/: midikirjoittaja.py  midilukija.py
src/musiikkidata/: A_Maj-bach-invention-12.txt  A_Maj-bwv798.txt  A_Min-bach-invention-13.txt  A_Min-bwv799.txt  B_Min-bwv801.txt  Bes_Maj-bach-invention-14.txt  Bes_Maj-bwv800.txt  C_Maj-bach-invention-01.txt  C_Maj-bwv787.txt  C_Min-bach-invention-02.txt  C_Min-bwv788.txt  D_Maj-bach-invention-03.txt  D_Maj-bwv789.txt  D_Min-bach-invention-04.txt  D_Min-bwv790.txt  E_Maj-bach-invention-06.txt  E_Maj-bwv792.txt  E_Min-bach-invention-07.txt  E_Min-bwv793.txt  Es_Maj-bach-invention-05.txt  Es_Maj-bwv791.txt  F_Maj-bach-invention-08.txt  F_Maj-bwv794.txt  F_Min-bach-invention-09.txt  G_Maj-bach-invention-10.txt  G_Maj-bwv796.txt  G_Min-bach-invention-11.txt  G_Min-bwv797.txt
src/musiikkiluokat/: aani.py  midikirjoittaja.py  midilukija.py  savel.py  savellaji.py  tahti.py  tempo.py
src/tests/: aani_test.py  arpoja_test.py  fakerandom.py  markov_savelma_test.py  savel_test.py  savellaji_test.py  tempo_test.py  testi_test.py  trie_test.py
src/trie/: trie.py  trie.txt
(+21 files in other folders)
