[tool.poetry]
name = "markovin-ketju-saveltaja"
version = "0.1.0"
description = ""
authors = ["Aikamoine <atte.laakso@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
mido = "^1.2.10"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pylint = "^2.8.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
